Made map canvas look better (fill page)

--- a/index.html
+++ b/index.html
@@ -45,27 +45,8 @@
       </div>
     </nav>
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Flood Predictor</h1>
-        <p>Map for predicting floods</p>
-      </div>
-    </div>
-
-    <div class="container">
-      <!-- Example row of columns -->
       <div class="row">
-        <div class="col-md-8 col-md-offset-2">
-          <div id="map-canvas" class="col-md-10">
-          </div>
-          <div class="col-md-2">
-            <h2>Legend</h2>
-            <p>Green: Okay</p>
-            <p>Blue: Flooded</p>
-            <p>Red: Drought</p>
-          </div>
-        </div>
+          <div id="map-canvas"></div>
       </div>
 
       <hr>
@@ -73,7 +54,6 @@
       <footer>
         <p>ESA Appathon 2015</p>
       </footer>
-    </div> <!-- /container -->
 
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
