--- a/view.html
+++ b/view.html
@@ -12,18 +12,15 @@
     <!-- Custom styles for this template -->
     <link href="css/jumbotron.css" rel="stylesheet">
     <link href="css/floodmap.css" rel="stylesheet">
+    <link href="css/login.css" rel="stylesheet">
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-    <!-- Google maps -->
     <script type="text/javascript"
-      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpvnelnoljDsvOV0CcRG_Kz2P7osmVf3g">
-    </script>
+      src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpvnelnoljDsvOV0CcRG_Kz2P7osmVf3g"></script>
     <script src="js/main.js"></script>
-    <script type="text/javascript" src="js/map.js"></script>
-
-
+    <script src="js/view.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -31,6 +28,12 @@
       <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
   </head>
+  <style>
+    div #map-canvas {
+        min-height: 600px;
+        width: 100%;
+    }
+  </style>
   <body>
 
     <!-- navbar -->
@@ -43,25 +46,37 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a id="nav_home_page" class="navbar-brand" href="/">FLOOD PREDICTOR APP</a>
+          <a id="nav_home_page" class="navbar-brand">Flood Predictor</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a id="nav_places" href="./places.html">My Places</a></li>
+            <li class="active"><a id="nav_places"  href="./places.html">My Places</a></li>
             <li><a href="./login.html">Logout</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
     </nav>
 
-      <div class="row">
-          <div id="map-canvas"></div>
+    <div class="container">
+      <div class="page-header">
+        <h2>Displaying a Single Place</h2>
       </div>
+      <div id="place_view_details">
 
-      <hr>
+      </div>
+      <div>
 
-      <footer>
+      </div>
+      <div>
+
+      </div>
+      <div id="map-canvas"></div>
+    </div>
+
+    <footer>
+      <div class="container">
         <p>ESA Appathon 2015</p>
-      </footer>
+      </div>
+    </footer>
   </body>
 </html>
