can now remove places

--- a/places.html
+++ b/places.html
@@ -64,11 +64,10 @@
             <th>Name</th>
             <th>Description</th>
             <th>View</th>
+            <th>Remove</th>
           </thead>
           <tbody id="places_table_body">
-            <tr>
-
-            </tr>
+            
           </tbody>
         </table>
       </div>
