--- a/view.html
+++ b/view.html
@@ -50,8 +50,8 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a id="nav_places"  href="./places.html">My Places</a></li>
-            <li><a href="./login.html">Logout</a></li>
+            <li class="active"><a id="nav_places"  href="places.html">My Places</a></li>
+            <li><a href="login.html">Logout</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
