--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a id="nav_places" href="./places.html">My Places</a></li>
-            <li><a href="./login.html">Logout</a></li>
+            <li><a id="nav_places" href="places.html">My Places</a></li>
+            <li><a href="login.html">Logout</a></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div>
