--- a/register.html
+++ b/register.html
@@ -7,18 +7,18 @@
     <title>Flood Predictor</title>
 
     <!-- Bootstrap -->
-    <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <link href="css/bootstrap.min.css" rel="stylesheet">
 
     <!-- Custom styles for this template -->
-    <link href="/css/jumbotron.css" rel="stylesheet">
-    <link href="/css/floodmap.css" rel="stylesheet">
-    <link href="/css/login.css" rel="stylesheet">
+    <link href="css/jumbotron.css" rel="stylesheet">
+    <link href="css/floodmap.css" rel="stylesheet">
+    <link href="css/login.css" rel="stylesheet">
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src="js/bootstrap.min.js"></script>
-    <script src="/js/main.js"></script>
-    <script src="/js/user.js"></script>
+    <script src="js/main.js"></script>
+    <script src="js/user.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Flood Predictor</a>
+          <a class="navbar-brand" href="index.html">Flood Predictor</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
         </div><!--/.navbar-collapse -->
@@ -77,7 +77,7 @@
                   <input class="btn btn-success" type="submit" value="Register!" />
                 </div>
                 <div class="form-group">
-                  <a href="/login.html">Already have an account? Click here to login now!</a>
+                  <a href="login.html">Already have an account? Click here to login now!</a>
                 </div>
               </form>
             </div>
