changed app name and added logo

--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Flood Predictor</title>
+    <title>Poseidon | Login</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Flood Predictor</a>
+          <a class="navbar-brand" href="#">POSEIDON</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
         </div><!--/.navbar-collapse -->
@@ -47,13 +47,15 @@
 
     <div class="container">
       <div class="page-header" style="text-align : center">
-        <h1>The Flood Predictor App</h1>
+        <p>
+          <img src="https://s3-eu-west-1.amazonaws.com/appathon-poseidon/logo.png" style="max-width : 200px"/>
+        </p>
       </div>
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3 col-xs-12">
           <div class="panel panel-primary">
             <div class="panel-heading">
-              <h3 class="panel-title">Welcome to APP NAME</h3>
+              <h3 class="panel-title">Welcome to POSEIDON</h3>
             </div>
             <div class="panel-body">
               <form role="form" onsubmit="user.login()">
@@ -79,7 +81,8 @@
     </div>
     <footer>
       <div class="container">
-        <p>ESA Appathon 2015</p>
+        <div class="page-header"></div>
+        <p style="text-align : center"><em>ESA Appathon 2015</em></p>
       </div>
     </footer>
   </body>
