--- a/register.html
+++ b/register.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Flood Predictor</title>
+    <title>Poseidon | Register</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -38,7 +38,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Flood Predictor</a>
+          <a class="navbar-brand" href="index.html">POSEIDON</a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
         </div><!--/.navbar-collapse -->
@@ -47,7 +47,9 @@
 
     <div class="container">
       <div class="page-header" style="text-align : center">
-        <h1>The Flood Predictor App</h1>
+        <p>
+          <img src="https://s3-eu-west-1.amazonaws.com/appathon-poseidon/logo.png" style="max-width : 200px"/>
+        </p>
       </div>
       <div class="row">
         <div class="col-sm-6 col-sm-offset-3 col-xs-12">
@@ -87,7 +89,8 @@
     </div>
     <footer>
       <div class="container">
-        <p>ESA Appathon 2015</p>
+        <div class="page-header"></div>
+        <p style="text-align : center"><em>ESA Appathon 2015</em></p>
       </div>
     </footer>
 
