--- a/view.html
+++ b/view.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Flood Predictor</title>
+    <title>POSEIDON | View Place</title>
 
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -46,7 +46,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a id="nav_home_page" class="navbar-brand">Flood Predictor</a>
+          <a id="nav_home_page" class="navbar-brand">POSEIDON</a>
         </div>
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
@@ -75,7 +75,8 @@
 
     <footer>
       <div class="container">
-        <p>ESA Appathon 2015</p>
+        <div class="page-header"></div>
+        <p style="text-align : center"><em>ESA Appathon 2015</em></p>
       </div>
     </footer>
   </body>
