--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <!-- Custom styles for this template -->
     <link href="css/jumbotron.css" rel="stylesheet">
     <link href="css/floodmap.css" rel="stylesheet">
+    <link href="css/slider.css" rel="stylesheet">
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -21,6 +22,7 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpvnelnoljDsvOV0CcRG_Kz2P7osmVf3g">
     </script>
     <script src="js/main.js"></script>
+    <script src="js/bootstrap-slider.js"></script>
     <script type="text/javascript" src="js/map.js"></script>
 
 
@@ -58,7 +60,10 @@
           <div id="map-canvas"></div>
       </div>
 
-      <hr>
+      <div style="position: fixed ; bottom : 20px; right : 20px;">
+          <input class="slider" id="toggle-map-opacity" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="70"/>
+      </div>
+
 
       <footer>
         <div class="container">
