--- a/view.html
+++ b/view.html
@@ -13,6 +13,7 @@
     <link href="css/jumbotron.css" rel="stylesheet">
     <link href="css/floodmap.css" rel="stylesheet">
     <link href="css/login.css" rel="stylesheet">
+    <link href="css/slider.css" rel="stylesheet">
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -21,6 +22,7 @@
       src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDpvnelnoljDsvOV0CcRG_Kz2P7osmVf3g"></script>
     <script src="js/main.js"></script>
     <script src="js/view.js"></script>
+    <script type="text/javascript" src="js/bootstrap-slider.js"></script>
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -71,6 +73,9 @@
 
       </div>
       <div id="map-canvas"></div>
+      <div style="position: fixed ; bottom : 20px; right : 20px;">
+          <input class="slider" id="toggle-map-opacity" data-slider-id='ex1Slider' type="text" data-slider-min="0" data-slider-max="100" data-slider-step="1" data-slider-value="70"/>
+      </div>
     </div>
 
     <footer>
